@@ -18,9 +18,11 @@ package org.apache.solr.client.solrj;
 
 import java.io.IOException;
 import java.io.Serializable;
-import java.util.Arrays;
+import java.security.Principal;
 import java.util.Collection;
-import java.util.HashSet;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
 
@@ -28,14 +30,22 @@ import org.apache.solr.client.solrj.request.RequestWriter;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.common.util.ContentStream;
 
-import static java.util.Collections.unmodifiableSet;
-
 /**
  * 
  *
  * @since solr 1.3
  */
 public abstract class SolrRequest<T extends SolrResponse> implements Serializable {
+  // This user principal is typically used by Auth plugins during distributed/sharded search
+  private Principal userPrincipal;
+
+  public void setUserPrincipal(Principal userPrincipal) {
+    this.userPrincipal = userPrincipal;
+  }
+
+  public Principal getUserPrincipal() {
+    return userPrincipal;
+  }
 
   public enum METHOD {
     GET,
@@ -44,14 +54,15 @@ public abstract class SolrRequest<T extends SolrResponse> implements Serializabl
     DELETE
   };
 
-  public static final Set<String> SUPPORTED_METHODS = unmodifiableSet(new HashSet<>(Arrays.<String>asList(
+  public static final Set<String> SUPPORTED_METHODS = Set.of(
       METHOD.GET.toString(),
       METHOD.POST.toString(),
       METHOD.PUT.toString(),
-      METHOD.DELETE.toString())));
+      METHOD.DELETE.toString());
 
   private METHOD method = METHOD.GET;
   private String path = null;
+  private Map<String,String> headers;
 
   private ResponseParser responseParser;
   private StreamingResponseCallback callback;
@@ -76,6 +87,8 @@ public abstract class SolrRequest<T extends SolrResponse> implements Serializabl
   }
 
   private String basicAuthUser, basicAuthPwd;
+
+  private String basePath;
 
   public SolrRequest setBasicAuthCredentials(String user, String password) {
     this.basicAuthUser = user;
@@ -215,4 +228,25 @@ public abstract class SolrRequest<T extends SolrResponse> implements Serializabl
     return getParams() == null ? null : getParams().get("collection");
   }
 
+  public void setBasePath(String path) {
+    if (path.endsWith("/")) path = path.substring(0, path.length() - 1);
+
+    this.basePath = path;
+  }
+
+  public String getBasePath() {
+    return basePath;
+  }
+
+  public void addHeader(String key, String value) {
+    if (headers == null) {
+      headers = new HashMap<>();
+    }
+    headers.put(key, value);
+  }
+
+  public Map<String, String> getHeaders() {
+    if (headers == null) return null;
+    return Collections.unmodifiableMap(headers);
+  }
 }
